<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="landingViewModel"
            type="com.cloudin.monsterchicken.activity.landing.LandingViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#e9e6e6"
        tools:context=".activity.landing.LandingActivity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/llBottomSheet"
            android:scaleType="centerCrop"
            android:src="@drawable/landing_bg" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="75dp"
                android:src="@drawable/ic_full_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat_semi_bold"
                android:text="@string/splash_quality_in_every_quantity"
                android:textColor="@color/black"
                android:textSize="17sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llBottomSheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/bg_landing_top_corner">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:text="@string/splash_set_location_to_proceed"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/splash_we_need_your_location"
                    android:textColor="@color/c4d4d4d"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvSetLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/common_botton"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/splash_set_location"
                    android:textColor="@color/white" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
</layout>