<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="verifyOtpViewModel"
            type="com.cloudin.monsterchicken.activity.verifyotp.VerifyOTPViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activity.verifyotp.VerifyOTPActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">

            <ImageView
                android:id="@+id/ivBackIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="20dp"
                android:paddingBottom="10dp"
                android:src="@drawable/ic_toolbar_arrow_back" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_semi_bold"
                            android:text="@string/verify_otp_verify_via_otp"
                            android:textColor="@color/black"
                            android:textSize="17sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:fontFamily="@font/montserrat_medium"
                            android:text="@{verifyOtpViewModel.phoneNumberText}"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            tools:text="Enter the OTP sent to you on 9698143213" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                        <com.cloudin.monsterchicken.utils.otpview.OtpTextView
                            android:id="@+id/otvOtp"
                            style="@style/prefix"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textColor="@color/c961A1C"
                            android:textSize="14sp"
                            app:bar_active_color="@color/c961A1C"
                            app:bar_enabled="true"
                            app:bar_height="2dp"
                            app:bar_inactive_color="@color/cFFE6E7"
                            app:height="55dp"
                            app:length="6"
                            app:otp_text_size="14sp"
                            app:width="45dp" />

                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp">

                        <TextView
                            android:id="@+id/tvResendOtp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:fontFamily="@font/montserrat_semi_bold"
                            android:gravity="end"
                            android:padding="10dp"
                            android:text="@string/verify_otp_resend_otp"
                            android:textColor="@color/c961A1C"
                            android:visibility="gone" />

                        <TextView
                            android:id="@+id/tvTimer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:fontFamily="@font/montserrat_semi_bold"
                            android:gravity="end"
                            android:padding="10dp"
                            android:textColor="@color/c9B9B9B"
                            tools:text="00 : 00" />

                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat"
                            android:text="@string/verify_otp_by_continuing_you_agree_to_our"
                            android:textColor="@color/black"
                            android:textSize="12sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:fontFamily="@font/montserrat"
                            android:text="@string/verify_otp_terms_conditions"
                            android:textColor="@color/c961A1C"
                            android:textSize="13sp" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tvContinue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="30dp"
                        android:background="@drawable/common_botton"
                        android:fontFamily="@font/montserrat_medium"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/verify_otp_continue"
                        android:textColor="@color/white" />

                </LinearLayout>

            </RelativeLayout>

        </ScrollView>

    </LinearLayout>
</layout>